Bound prepared-audio resource consumption (#765)
* Bound prepared audio resource use

* fix(cli): bound prepared-audio work and child output

* fix(cli): bound prepared-audio child work input

* test(cli): cover bounded prepared-audio work input

* fix(cli): preserve prepared-audio timeout outcome